{
  "version": 4,
  "terraform_version": "1.2.6",
  "serial": 48,
  "lineage": "707e5160-156f-2108-85d1-be09c5f89589",
  "resources": [
    {
      "mode": "data",
      "type": "aws_subnet",
      "name": "example2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "subnet-0173a1759c2ba2da6",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:263443418578:subnet/subnet-0173a1759c2ba2da6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2b",
            "availability_zone_id": "apne2-az2",
            "available_ip_address_count": 4091,
            "cidr_block": "172.31.16.0/20",
            "default_for_az": true,
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0173a1759c2ba2da6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "263443418578",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "vpc_id": "vpc-00d4da8109a0cf540"
          }
        },
        {
          "index_key": "subnet-09b3892ccd00c5c0c",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:263443418578:subnet/subnet-09b3892ccd00c5c0c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "available_ip_address_count": 4089,
            "cidr_block": "172.31.0.0/20",
            "default_for_az": true,
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09b3892ccd00c5c0c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "263443418578",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "vpc_id": "vpc-00d4da8109a0cf540"
          }
        },
        {
          "index_key": "subnet-0b4bb5485ac597404",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:263443418578:subnet/subnet-0b4bb5485ac597404",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "available_ip_address_count": 4089,
            "cidr_block": "172.31.32.0/20",
            "default_for_az": true,
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b4bb5485ac597404",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "263443418578",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "vpc_id": "vpc-00d4da8109a0cf540"
          }
        },
        {
          "index_key": "subnet-0b54f1a3ab15025e0",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:263443418578:subnet/subnet-0b54f1a3ab15025e0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2d",
            "availability_zone_id": "apne2-az4",
            "available_ip_address_count": 4091,
            "cidr_block": "172.31.48.0/20",
            "default_for_az": true,
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b54f1a3ab15025e0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "263443418578",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "vpc_id": "vpc-00d4da8109a0cf540"
          }
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "bar",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:263443418578:vpc/vpc-00d4da8109a0cf540",
            "cidr_block": "172.31.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-05a2868acb662c799",
                "cidr_block": "172.31.0.0/16",
                "state": "associated"
              }
            ],
            "default": true,
            "dhcp_options_id": "dopt-ff12dc94",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-00d4da8109a0cf540",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0d8216f3f71355aa6",
            "owner_id": "263443418578"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "test",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:263443418578:loadbalancer/app/test-lb-tf/85503872e9af0d57",
            "arn_suffix": "app/test-lb-tf/85503872e9af0d57",
            "desync_mitigation_mode": "defensive",
            "dns_name": "test-lb-tf-684766590.ap-northeast-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:263443418578:loadbalancer/app/test-lb-tf/85503872e9af0d57",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "test-lb-tf",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0951b79125dad4e1b"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0173a1759c2ba2da6"
              },
              {
                "subnet_id": "subnet-09b3892ccd00c5c0c"
              },
              {
                "subnet_id": "subnet-0b4bb5485ac597404"
              },
              {
                "subnet_id": "subnet-0b54f1a3ab15025e0"
              }
            ],
            "subnets": [
              "subnet-0173a1759c2ba2da6",
              "subnet-09b3892ccd00c5c0c",
              "subnet-0b4bb5485ac597404",
              "subnet-0b54f1a3ab15025e0"
            ],
            "tags": {
              "Name": "alb"
            },
            "tags_all": {
              "Name": "alb"
            },
            "vpc_id": "vpc-00d4da8109a0cf540",
            "zone_id": "ZWKZPGTI48KDX"
          },
          "dependencies": [
            "aws_security_group.allow_alb",
            "data.aws_subnets.example2",
            "data.aws_vpc.bar"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "front_end",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:263443418578:listener/app/test-lb-tf/85503872e9af0d57/b8bc445973f956a1",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:263443418578:targetgroup/tf-example-lb-tg/5ef5b5def0d300c8",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:263443418578:listener/app/test-lb-tf/85503872e9af0d57/b8bc445973f956a1",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:263443418578:loadbalancer/app/test-lb-tf/85503872e9af0d57",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.test",
            "aws_lb_target_group.ip-example",
            "aws_security_group.allow_alb",
            "data.aws_subnets.example2",
            "data.aws_vpc.bar"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "ip-example",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:263443418578:targetgroup/tf-example-lb-tg/5ef5b5def0d300c8",
            "arn_suffix": "targetgroup/tf-example-lb-tg/5ef5b5def0d300c8",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 5,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 2,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:263443418578:targetgroup/tf-example-lb-tg/5ef5b5def0d300c8",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "tf-example-lb-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-00d4da8109a0cf540"
          },
          "dependencies": [
            "data.aws_vpc.bar"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "test-2a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:263443418578:targetgroup/tf-example-lb-tg/5ef5b5def0d300c8-20220809232911966600000002",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:263443418578:targetgroup/tf-example-lb-tg/5ef5b5def0d300c8",
            "target_id": "172.31.11.135"
          },
          "dependencies": [
            "aws_lb_target_group.ip-example",
            "data.aws_instances.test"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:263443418578:targetgroup/tf-example-lb-tg/5ef5b5def0d300c8-20220809232911946200000001",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:263443418578:targetgroup/tf-example-lb-tg/5ef5b5def0d300c8",
            "target_id": "172.31.39.136"
          },
          "dependencies": [
            "aws_lb_target_group.ip-example",
            "data.aws_instances.test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:263443418578:security-group/sg-0951b79125dad4e1b",
            "description": "Allow alb inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0951b79125dad4e1b",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "ALB from VPC",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "allow_alb",
            "name_prefix": "",
            "owner_id": "263443418578",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_alb"
            },
            "tags_all": {
              "Name": "allow_alb"
            },
            "timeouts": null,
            "vpc_id": "vpc-00d4da8109a0cf540"
          },
          "sensitive_attributes": []
        }
      ]
    }
  ]
}